@@ -12,13 +12,10 @@ Version 1.2
 "MarkupSafe" package, which Mako and Pylons have also switched to.  MarkupSafe
 has a C speedup for escaping, escapes single-quotes for greater security (to
 close a potential XSS attack route), and adds new methods to ``literal``.
-
-* **literal** is now a subclass of ``markupsafe.Markup``
-
-* **escape** is ``markupsafe.escape_silent``
-
-*Note*: ``escape_silent`` does not exist yet in MarkupSafe 0.9.3, but
-WebHelpers has a fallback. 
+**literal** is now a subclass of ``markupsafe.Markup``
+**escape** is ``markupsafe.escape_silent``
+(Note: ``escape_silent`` does not exist yet in MarkupSafe 0.9.3, but
+WebHelpers has a fallback.)
 
 *webhelpers.html.tags:* The ``text()`` helper has a "type" argument for new
 HTML 5 input types.
@@ -26,6 +23,9 @@ HTML 5 input types.
 *webhelpers.html.tags:* **Don't add an "id" attribute to hidden fields
 generated by the ``form()`` helper**: the IDs clash if there are multiple forms
 on the page. To create a hidden field with an ID, call ``hidden()`` directly.
+
+*webhelpers.util:* ``update_params`` now supports query parameters with
+multiple values.
 
 Version 1.1
 -----------
